tests/compile_fail/ktstr_test_payload_also_in_workloads.stderr
error: `FIO` appears in both `payload = ...` and `workloads = [..]` — pick one. The primary payload runs as the test's main workload; entries in `workloads` are composed alongside it.
  --> tests/compile_fail/ktstr_test_payload_also_in_workloads.rs:14:42
   |
14 | #[ktstr_test(payload = FIO, workloads = [FIO])]
   |                                          ^^^
